--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>linkler</title>
-  <link rel="stylesheet" href="style0.css">
-  <link rel="stylesheet" href="style1.css">
-  <link rel="stylesheet" href="mediaqueries0.css">
-  <link rel="stylesheet" href="mediaqueries1.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body scroll="no">
   <header>
